--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -181,8 +181,8 @@ html, body {
 
 /*Admin session end*/
 
-/*Login session*/
+/*SignIn session*/
 .login-body {
     background-color: #f8e3fa;
 }
-/*Login session end*/
+/*SignIn session end*/
