re-construct folder

--- a/src/components/HomePage/Home.scss
+++ b/src/components/HomePage/Home.scss
@@ -1,5 +1,5 @@
 .search-container {
-    background-image: url("../styles/images/backgroud-search.jpg");
+    background-image: url("../../styles/images/backgroud-search.jpg");
     height: 700px;
     width: 100%;
     /*background-attachment: fixed;*/
